--- a/site/public/index.html
+++ b/site/public/index.html
@@ -7,6 +7,7 @@
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="shortcut icon" href="../src/media/logo.png"> 
         
     <title>Lego Assembly</title>
   </head>
